为拍照和选择图形添加PopWindow

--- a/SketchingTools/app/src/main/res/values/styles.xml
+++ b/SketchingTools/app/src/main/res/values/styles.xml
@@ -8,5 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
+    <style name="popup_window_for_picture">
+        <!-- 指定显示动画-->
+        <item name="android:windowEnterAnimation">@anim/popup_window_show</item>
+        <!-- 指定隐藏动画-->
+        <item name="android:windowExitAnimation">@anim/popup_window_hidden</item>
+    </style>
 </resources>
