--- a/SketchingTools/app/src/main/res/layout/popup_windows_for_picture.xml
+++ b/SketchingTools/app/src/main/res/layout/popup_windows_for_picture.xml
@@ -27,7 +27,9 @@
         android:id="@+id/cancal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/back_style"
         android:text="@string/cancal"
         android:textSize="20sp" />
