--- a/SketchingTools/app/src/main/res/layout/baby_home_graphic_item.xml
+++ b/SketchingTools/app/src/main/res/layout/baby_home_graphic_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginTop="5dp">
 
     <ImageView
         android:id="@+id/graphic_image"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp" />
-</LinearLayout>
+        android:layout_centerInParent="true" />
+</RelativeLayout>
