--- a/SketchingTools/app/src/main/res/layout/baby_home_layout.xml
+++ b/SketchingTools/app/src/main/res/layout/baby_home_layout.xml
@@ -7,145 +7,172 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="horizontal"
-        android:padding="3dp">
+    <RelativeLayout style="@style/ToolbarRl">
 
-        <Button
-            android:id="@+id/back"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/back_style"
-            android:text="@string/back"
-            android:textSize="20sp" />
+        <android.support.v7.widget.Toolbar style="@style/Toolbar">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2.5"
-            android:gravity="center"
-            android:text="@string/baby_go_home"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/toolbar_title"
+                style="@style/ToolbarTitle"
+                android:text="@string/baby_go_home" />
+        </android.support.v7.widget.Toolbar>
 
-        <Button
-            android:id="@+id/open_camera_or_open_picture"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/back_style"
-            android:text="@string/open_camera_or_open_picure"
-            android:textSize="20sp" />
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/toolbar_left"
+            style="@style/ToolbarLeft"
+            android:src="@mipmap/toolbar_back" />
+
+        <ImageView
+            android:id="@+id/toolbar_right"
+            style="@style/ToolbarRight"
+            android:src="@mipmap/toolbar_more" />
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <cug.school.sketchingtools.common.DrawSketchView
+        <cug.school.sketching.common.DrawSketchView
             android:id="@+id/draw_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f5f5f5f5" />
 
         <LinearLayout
-            android:id="@+id/operation_linearLayout"
+            android:id="@+id/choose_graphic_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@drawable/back_style"
-            android:orientation="horizontal"
-            android:padding="5dp"
-            android:visibility="gone">
-
-            <Button
-                android:id="@+id/undo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/back_style"
-                android:text="@string/undo"
-                android:textSize="15sp" />
-
-            <Button
-                android:id="@+id/reset"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/back_style"
-                android:text="@string/reset"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <TabHost
-            android:id="@+id/tab_host"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:orientation="vertical"
             android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:orientation="horizontal">
 
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="#FFFFFF" />
+                <TextView
+                    android:id="@+id/road_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/road"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
 
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#F5F5F5F5">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/gray" />
 
-                    <!-- 道路视图-->
-                    <GridView
-                        android:id="@+id/road_gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:horizontalSpacing="10dp"
-                        android:numColumns="5"
-                        android:verticalSpacing="10dp" />
+                <TextView
+                    android:id="@+id/bridge_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/bridge"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
 
-                    <!-- 桥梁视图-->
-                    <GridView
-                        android:id="@+id/bridge_gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:numColumns="5" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/gray" />
 
-                    <!-- 建筑视图-->
-                    <GridView
-                        android:id="@+id/building_gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:numColumns="5" />
+                <TextView
+                    android:id="@+id/building_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/building"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
 
-                    <!-- 河流视图-->
-                    <GridView
-                        android:id="@+id/river_gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:numColumns="5" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/gray" />
 
-                    <!-- 自定义视图-->
-                    <GridView
-                        android:id="@+id/design_gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:numColumns="5" />
-                </FrameLayout>
+                <TextView
+                    android:id="@+id/river_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/river"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/gray" />
+
+                <TextView
+                    android:id="@+id/design_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/design"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
             </LinearLayout>
-        </TabHost>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/half_alpha"
+                android:dividerHeight="5dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/operation_linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:background="@drawable/item_stroke"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/undo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/undo"
+                android:textSize="15sp"
+                android:textColor="@color/font_gray_deep"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/line"/>
+
+            <TextView
+                android:id="@+id/reset"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/reset"
+                android:textSize="15sp"
+                android:textColor="@color/font_gray_deep"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/xml_content"
@@ -157,43 +184,51 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="horizontal"
-        android:padding="3dp">
+        android:layout_height="@dimen/toolbarSize"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
-        <Button
+        <TextView
             android:id="@+id/choose_picture"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_height="@dimen/toolbarSize"
             android:layout_weight="1"
-            android:background="@drawable/back_style"
+            android:gravity="center"
             android:text="@string/choose_picture"
-            android:textSize="20sp" />
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/operation_button"
-            style="?android:attr/buttonBarButtonStyle"
+        <View
+            android:layout_width="1dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/gray" />
+
+        <TextView
+            android:id="@+id/operation"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_height="@dimen/toolbarSize"
             android:layout_weight="1"
-            android:background="@drawable/back_style"
-            android:text="@string/do_something"
-            android:textSize="20sp" />
+            android:gravity="center"
+            android:text="@string/operation"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-        <Button
+        <View
+            android:layout_width="1dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/gray" />
+
+        <TextView
             android:id="@+id/find_home"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_height="@dimen/toolbarSize"
             android:layout_weight="1"
-            android:background="@drawable/back_style"
+            android:gravity="center"
             android:text="@string/find_home"
-            android:textSize="20sp" />
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </LinearLayout>
