--- a/SketchingTools/app/src/main/res/layout/baby_home_popup_layout.xml
+++ b/SketchingTools/app/src/main/res/layout/baby_home_popup_layout.xml
@@ -1,38 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:padding="20dp">
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:orientation="vertical">
 
-    <Button
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="2dp"
+    android:background="@drawable/edit_pop_bg"
+    android:orientation="vertical">
+
+    <LinearLayout
         android:id="@+id/open_camera"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/back_style"
-        android:text="@string/open_camera"
-        android:textSize="20sp" />
+        android:layout_height="45dp"
+        android:background="@drawable/item_top_round_selector"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:src="@mipmap/camera" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
+            android:text="@string/open_camera"
+            android:textColor="@color/font_gray_deep"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#c1c1c1" />
 
     <Button
-        android:id="@+id/open_picture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/back_style"
+        android:id="@+id/open_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginBottom="1px"
+        android:layout_marginLeft="1px"
+        android:layout_marginRight="1px"
+        android:background="@drawable/item_bottom_round_selector"
+        android:drawableLeft="@mipmap/gallery"
+        android:drawablePadding="2dp"
+        android:drawableStart="@mipmap/gallery"
+        android:paddingEnd="20dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="20dp"
+        android:paddingStart="5dp"
         android:text="@string/open_picture"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/cancal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/back_style"
-        android:text="@string/cancel"
-        android:textSize="20sp" />
-
+        android:textColor="@color/font_gray_deep"
+        android:textSize="15sp" />
+</LinearLayout>
 </LinearLayout>
