--- a/SketchingTools/app/src/main/res/layout/baby_home_layout.xml
+++ b/SketchingTools/app/src/main/res/layout/baby_home_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/baby_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
     <RelativeLayout style="@style/ToolbarRl">
 
@@ -33,6 +31,15 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+        <TextView
+            android:id="@+id/dealing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="@string/dealing"
+            android:visibility="gone"
+            android:layout_gravity="center"/>
+
         <cug.school.sketching.common.DrawSketchView
             android:id="@+id/draw_view"
             android:layout_width="match_parent"
@@ -49,83 +56,83 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/road_tv"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/road"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
                 <View
                     android:layout_width="1dp"
-                    android:layout_height="16dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="@color/gray" />
 
                 <TextView
                     android:id="@+id/bridge_tv"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/bridge"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
                 <View
                     android:layout_width="1dp"
-                    android:layout_height="16dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="@color/gray" />
 
                 <TextView
                     android:id="@+id/building_tv"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/building"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
                 <View
                     android:layout_width="1dp"
-                    android:layout_height="16dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="@color/gray" />
 
                 <TextView
                     android:id="@+id/river_tv"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/river"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
                 <View
                     android:layout_width="1dp"
-                    android:layout_height="16dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="@color/gray" />
 
                 <TextView
                     android:id="@+id/design_tv"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/design"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
